--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,7 +14,7 @@ updates:
 
   - package-ecosystem: "nuget"
     # location of package manifests
-    directory: "/"
+    directory: "src/csharp/"
     open-pull-requests-limit: 10
     schedule:
       interval: "daily"
@@ -26,31 +26,7 @@ updates:
 
   - package-ecosystem: "maven"
     # location of package manifests
-    directory: "/"
-    open-pull-requests-limit: 10
-    schedule:
-      interval: "daily"
-    # target-branch: 'develop'
-    # assignees:
-    #   - assignee_one
-    # reviewers:
-    #   - reviewer_one
-
-  - package-ecosystem: "gradle"
-    # location of package manifests
-    directory: "/"
-    open-pull-requests-limit: 10
-    schedule:
-      interval: "daily"
-    # target-branch: 'develop'
-    # assignees:
-    #   - assignee_one
-    # reviewers:
-    #   - reviewer_one
-
-  - package-ecosystem: "pip"
-    # location of package manifests
-    directory: "/"
+    directory: "src/scala/"
     open-pull-requests-limit: 10
     schedule:
       interval: "daily"
