--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,10 +3,10 @@ name: CodeQL Analysis
 on:
   push:
     paths:
-        - 'src/csharp/**'
+     - 'src/csharp/**'
   pull_request:
     paths:
-        - 'src/csharp/**'
+      - 'src/csharp/**'
   schedule:
     - cron: '0 8 * * *'
   workflow_dispatch:
@@ -23,17 +23,17 @@ jobs:
       - name: Initialize CodeQL
         id: init_codeql
         uses: github/codeql-action/init@v1
-        with:
-          queries: security-and-quality
+        # with:
+        #   queries: security-and-quality
 
       - name: Build projects
         id: build_projects 
         shell: pwsh
         run: |
-            Get-ChildItem -Path src/csharp/ -Filter *.csproj -Exclude *test* -Recurse -File | ForEach-Object {
-                dotnet build $PSItem.FullName `
-                --configuration Release
-            }
+          Get-ChildItem -Path src/csharp/ -Filter *.csproj -Exclude *test* -Recurse -File | ForEach-Object {
+            dotnet build $PSItem.FullName `
+            --configuration Release
+          }
 
       - name: Perform CodeQL Analysis
         id: analyze_codeql
